# cookiecutter-jira-project

./: .bumpversion.cfg  .gitignore  README.md  cookiecutter.json  dev.md  pyproject.toml
.github/workflows/: ci.yml
hooks/: post_gen_project.py
tests/: test_helper.bash  utils.bats
{{cookiecutter.jira_code|lower}}/: utils.sh
{{cookiecutter.jira_code}}/: utils.sh
{{cookiecutter.jira_code}}/retro/: retro_template.md
{{cookiecutter.project_name|lower}}/: utils.sh
{{cookiecutter.project_name|lower}}/githooks/: commit-msg
{{cookiecutter.project_name|lower}}/retro/: retro_template.md
