[tool.poetry]
name = "cookiecutter-jira-project"
version = "1.0.0"
description = "A cookiecutter template for managing jira projects locally"
authors = ["Conor Sheehan <conor.sheehan.dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
cookiecutter = "^1.7.2"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
taskipy = "^1.8.1"

[tool.taskipy.tasks]
tests = "bats $(find ./tests -name '*.bats' | sort)"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
